# Vixen

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  discordbotinfo.txt  docker-compose.yml  index.js  main.py  package-lock.json  package.json  pyproject.toml  vixen.js  vixen.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 04643059de59_add_user_ucid_snipe_scores_table.py  6e1ac9482ec0_add_reminders_table.py  6f051e41caf1_add_lottery_entries_table.py  b231e2ca853e_initial_schema.py
cogs/: admin.py  attendance.py  avatar_cog.py  doge_cog.py  economy.py  fin_cog.py  fishing.py  games.py  help_cog.py  leaderboard.py  lottery.py  modal_cog.py  moderation.py  prefix.py  reminders.py  robbery.py  rpg_cog.py  shop.py  snipe_cog.py  use.py  utility.py  view_cog.py  weather.py
commands/: fuck.js  test.js
data/: rpg.json
deploy/: README.md
scripts/: import_legacy_rpg.py  import_legacy_stats.py
src/vixen/: __init__.py  __main__.py  bot.py  cache.py  config.py  db.py  logging.py
src/vixen/models/: __init__.py  base.py  guild.py  inventory.py  lottery.py  reminder.py  snipe.py  transaction.py  user.py
src/vixen/services/: __init__.py  attendance.py  charts.py  cooldown.py  economy.py  effects.py  finance.py  fishing.py  http.py  items.py  leaderboard.py  lottery.py  prefix.py  reminders.py  robbery.py  shop.py  snipe.py  use.py  weather.py
tests/: conftest.py
tests/services/: test_attendance.py  test_cooldown.py  test_economy.py  test_finance.py  test_fishing.py  test_leaderboard.py  test_lottery.py  test_prefix.py  test_reminders.py  test_robbery.py  test_shop.py  test_snipe.py  test_use.py  test_weather.py
vixenjavascriptarchive/: ecosystem.config.js  package-lock.json  package.json  vixen.js
vixenjavascriptarchive/commands/: README.md  ping.js  test.js
